force-app/main/default/objects/Case/fields/Total_of_Days_to_initial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Days_to_initial_Contact__c</fullName>
    <formula>IF(RecordType.Name = &quot;OGIS&quot;,
  CASE(MOD( DATEVALUE(CreatedDate) - DATE(1985,6,24),7), 
    0 , CASE( MOD(Date_of_Initial_Contact_Customer_Agency__c - DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
    1 , CASE( MOD(Date_of_Initial_Contact_Customer_Agency__c - DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
    2 , CASE( MOD(Date_of_Initial_Contact_Customer_Agency__c - DATEVALUE(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
    3 , CASE( MOD(Date_of_Initial_Contact_Customer_Agency__c - DATEVALUE(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
    4 , CASE( MOD(Date_of_Initial_Contact_Customer_Agency__c - DATEVALUE(CreatedDate),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
    5 , CASE( MOD(Date_of_Initial_Contact_Customer_Agency__c - DATEVALUE(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
    6 , CASE( MOD(Date_of_Initial_Contact_Customer_Agency__c - DATEVALUE(CreatedDate),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
    99
  ) + (FLOOR((Date_of_Initial_Contact_Customer_Agency__c - DATEVALUE(CreatedDate))/7)*5 -  Holiday_Counter_Date_of_Initial_Contact__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total # of Days to Initial Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>