force-app/main/default/objects/Case/fields/Total_of_Inquiry_Deficiency_Notices__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Inquiry_Deficiency_Notices__c</fullName>
    <description>field to count the total number of inquiry deficiency notices. Anytime this total number increases, a notification email alert is sent to the researcher automatically.</description>
    <label>Total # of Inquiry Deficiency Notices</label>
    <summaryForeignKey>PULLDB_Deficiency_Notice__c.Inquiry__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>