force-app/main/default/objects/Case/fields/Total_of_Regular_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Regular_Line_Items__c</fullName>
    <description>roll up of all reference service slips that are marked as non- special handling or regular record requests.</description>
    <label>Total # of Regular Line Items</label>
    <summaryFilterItems>
        <field>PULLDB_Reference_Service_Slips__c.Screening_Required__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>PULLDB_Reference_Service_Slips__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>