force-app/main/default/objects/Case/fields/Type_of_Items_Retrieved__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Items_Retrieved__c</fullName>
    <label>Type of Items Retrieved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Textual Record</fullName>
            </value>
            <value>
                <fullName>Microfilm</fullName>
            </value>
            <value>
                <fullName>Map</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>