force-app/main/default/objects/Case/recordTypes/Controlled_Action.recordType-meta.xml
<RecordType>
    <fullName>Controlled_Action</fullName>
    <active>true</active>
    <businessProcess>Controlled Actions</businessProcess>
    <description>This supports the ability of Executive Secretariat (SE) users to track requests received by the agency, including all work and communications relating to that action.</description>
    <label>Controlled Action</label>
</RecordType>