force-app/main/default/objects/Case/recordTypes/ECT_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>ECT_Inquiry</fullName>
    <active>true</active>
    <businessProcess>ECT System</businessProcess>
    <label>ECT Inquiry</label>
</RecordType>