force-app/main/default/objects/Case/recordTypes/OGIS.recordType-meta.xml
<RecordType>
    <fullName>OGIS</fullName>
    <active>true</active>
    <businessProcess>OGIS System</businessProcess>
    <description>This supports the ability of OGIS users to track FOIA requests</description>
    <label>OGIS</label>
</RecordType>