force-app/main/default/objects/Case/validationRules/Case_Category_Required_to_Close_a_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Category_Required_to_Close_a_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name = &quot;OGIS&quot;,
ISPICKVAL(Status, &quot;Closed&quot;),
OR(
ISPICKVAL(Case_Category__c, &quot;&quot;)
))</errorConditionFormula>
    <errorDisplayField>Case_Category__c</errorDisplayField>
    <errorMessage>Case Category cannot be blank before case can be closed</errorMessage>
</ValidationRule>