force-app/main/default/objects/Case/validationRules/Case_Summary_Required_to_Close_a_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Summary_Required_to_Close_a_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name = &quot;OGIS&quot;,
ISPICKVAL(Status, &quot;Closed&quot;),
OR(
LEN(Case_Summary__c) = 0
))</errorConditionFormula>
    <errorDisplayField>Case_Summary__c</errorDisplayField>
    <errorMessage>Case Summary cannot be blank before case can be closed</errorMessage>
</ValidationRule>