force-app/main/default/objects/Case/validationRules/Contact_Required_to_Close_a_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Required_to_Close_a_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name = &quot;OGIS&quot;,
ISPICKVAL(Status, &quot;Closed&quot;),
OR(
ISBLANK(ContactId)
))</errorConditionFormula>
    <errorDisplayField>ContactId</errorDisplayField>
    <errorMessage>Contact Name cannot be blank before case can be closed</errorMessage>
</ValidationRule>