force-app/main/default/objects/Case/validationRules/Date_of_Initial_Contact_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Initial_Contact_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name = &quot;OGIS&quot;,
ISPICKVAL(Status, &quot;Closed&quot;),
OR(
ISBLANK( Date_of_Initial_Contact_Customer_Agency__c )
))</errorConditionFormula>
    <errorDisplayField>Date_of_Initial_Contact_Customer_Agency__c</errorDisplayField>
    <errorMessage>Date of initial Contact cannot be blank before case can be closed</errorMessage>
</ValidationRule>