force-app/main/default/objects/Case/validationRules/Date_Received_Required_to_Close_a_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Received_Required_to_Close_a_Case</fullName>
    <active>false</active>
    <errorConditionFormula>AND( RecordType.Name = &quot;OGIS&quot;,
ISPICKVAL(Status, &quot;Closed&quot;),
OR(
ISBLANK(Date_Received__c)
))</errorConditionFormula>
    <errorDisplayField>Date_Received__c</errorDisplayField>
    <errorMessage>Date Received cannot be blank before case can be closed</errorMessage>
</ValidationRule>