force-app/main/default/objects/Case/validationRules/Dept_or_Agency_Required_to_Close_a_case.validationRule-meta.xml
<ValidationRule>
    <fullName>Dept_or_Agency_Required_to_Close_a_case</fullName>
    <active>false</active>
    <errorConditionFormula>AND( RecordType.Name = &quot;OGIS&quot;,
ISPICKVAL(Status, &quot;Closed&quot;),
OR(
ISNULL(Dept_or_Agency_and_Component__c)
))</errorConditionFormula>
    <errorMessage>Dept or Agency and Component cannot be blank before case can be closed</errorMessage>
</ValidationRule>