force-app/main/default/objects/Case/validationRules/Description_Required_to_Close_a_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Required_to_Close_a_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name = &quot;OGIS&quot;,
ISPICKVAL(Status, &quot;Closed&quot;),
OR(
LEN(Description) = 0
))</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Description cannot be blank before case can be closed</errorMessage>
</ValidationRule>