force-app/main/default/objects/Case/validationRules/FOIA_Req_Stage_Required_to_Close_a_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>FOIA_Req_Stage_Required_to_Close_a_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name = &quot;OGIS&quot;,
ISPICKVAL(Status, &quot;Closed&quot;),
OR(
ISPICKVAL(FOIA_Request_Stage__c, &quot;&quot;)
))</errorConditionFormula>
    <errorDisplayField>FOIA_Request_Stage__c</errorDisplayField>
    <errorMessage>FOIA Request Stage cannot be blank before case can be closed</errorMessage>
</ValidationRule>