force-app/main/default/objects/Case/validationRules/Status_cannot_be_edited_when_closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_cannot_be_edited_when_closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Name = &quot;OGIS&quot;,
ISPICKVAL(PRIORVALUE(Status), &apos;Closed&apos;),
ISCHANGED(Status)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Status cannot be changed when closed</errorMessage>
</ValidationRule>