force-app/main/default/objects/Case/validationRules/Template_Enter_Required_to_Close_a_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Template_Enter_Required_to_Close_a_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name = &quot;OGIS&quot;,
ISPICKVAL(Status, &quot;Closed&quot;),
OR(
ISPICKVAL(Template_Enter_if_Relevant__c, &quot;&quot;)
))</errorConditionFormula>
    <errorDisplayField>Template_Enter_if_Relevant__c</errorDisplayField>
    <errorMessage>Template Enter if Relevant cannot be blank before case can be closed</errorMessage>
</ValidationRule>