force-app/main/default/objects/Case/validationRules/Type_Required_to_Close_a_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_Required_to_Close_a_Case</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name = &quot;OGIS&quot;,
ISPICKVAL(Status, &quot;Closed&quot;),
OR(
ISPICKVAL(Type, &quot;&quot;)
))</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>Type cannot be blank before case can be closed</errorMessage>
</ValidationRule>