force-app/main/default/objects/Case/listViews/All_Cases_with_Pulls.listView-meta.xml
<ListView>
    <fullName>All_Cases_with_Pulls</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Inquiry</value>
    </filters>
    <label>All Cases with Pulls</label>
    <sharedTo>
        <role>PullDB</role>
    </sharedTo>
</ListView>