force-app/main/default/objects/Case/listViews/All_New_Cases.listView-meta.xml
<ListView>
    <fullName>All_New_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>All New  Cases</label>
    <sharedTo>
        <group>ECRM_Admins</group>
    </sharedTo>
</ListView>