force-app/main/default/objects/Case/listViews/ALL_OGIS_CASES.listView-meta.xml
<ListView>
    <fullName>ALL_OGIS_CASES</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Is_Time_Sensitive__c</columns>
    <columns>Case_Age__c</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Case_Category__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Queue__c</columns>
    <columns>Date_Assigned__c</columns>
    <columns>Date_of_Initial_Contact_Customer_Agency__c</columns>
    <columns>DateClosed__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>Case_Age_Alert__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.OGIS</value>
    </filters>
    <label>ALL OGIS CASES</label>
    <sharedTo>
        <group>OGIS_Users</group>
    </sharedTo>
</ListView>