force-app/main/default/objects/Case/listViews/All_Open_Controlled_Actions.listView-meta.xml
<ListView>
    <fullName>All_Open_Controlled_Actions</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Controlled_Action_Number__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Controlled_Action</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress</value>
    </filters>
    <label>All Open Controlled Actions</label>
    <sharedTo>
        <role>Archivist</role>
    </sharedTo>
</ListView>