force-app/main/default/objects/Case/listViews/ECT_Case_Support_Case.listView-meta.xml
<ListView>
    <fullName>ECT_Case_Support_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>ECT Case Support</label>
    <queue>ECT_Case_Support</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>