force-app/main/default/objects/Case/listViews/My_Open_ECT_Inquiries.listView-meta.xml
<ListView>
    <fullName>My_Open_ECT_Inquiries</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ECTOwner__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Open ECT Inquiries</label>
    <sharedTo>
        <group>ECT_NARA_Super_Users</group>
        <group>ECT_OFR_Legal_Users</group>
        <group>ECT_State_Users</group>
    </sharedTo>
</ListView>