force-app/main/default/objects/Case/listViews/New_Controlled_Actions_Case.listView-meta.xml
<ListView>
    <fullName>New_Controlled_Actions_Case</fullName>
    <columns>CASES.SUBJECT</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Email Controlled Actions</label>
    <queue>New_Controlled_Actions</queue>
    <sharedTo>
        <role>Archivist</role>
    </sharedTo>
</ListView>